--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -17,6 +17,9 @@
     "semantic-ui-react": "^0.88.2",
     "typescript": "~3.7.2"
   },
+  "devDependencies": {
+    "prettier": "^2.0.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -37,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
