--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -18,12 +18,16 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "tslint": "^6.1.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0"
   },
   "scripts": {
+    "lint": "tslint --project tsconfig.json -t codeFrame 'src/**/*.ts*' 'test/**/*.ts*'",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "yarn lint && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
