--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,6 @@
+# Development database
+data
+
 lib-cov
 *.seed
 *.log
@@ -37,5 +40,5 @@ Thumbs.db
 # Ignore built ts files
 dist/**/*
 
-# ignore yarn.lock
-yarn.lock
+# ignore package-lock.json
+package-lock.json
