--- a/backend/package.json
+++ b/backend/package.json
@@ -9,22 +9,22 @@
     "author": "Bowden Kelly",
     "license": "MIT",
     "scripts": {
-        "start": "npm run serve",
-        "build": "npm run build-sass && npm run build-ts && npm run lint && npm run copy-static-assets",
+        "start": "yarn serve",
+        "build": "yarn build-sass && yarn build-ts && yarn lint && yarn copy-static-assets",
         "serve": "node dist/server.js",
         "watch-node": "nodemon dist/server.js",
-        "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
+        "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-sass\" \"yarn watch-ts\" \"yarn watch-node\"",
         "test": "jest --forceExit --coverage --verbose",
-        "watch-test": "npm run test -- --watchAll",
+        "watch-test": "yarn test -- --watchAll",
         "build-ts": "tsc",
         "watch-ts": "tsc -w",
         "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
         "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
         "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
         "copy-static-assets": "ts-node copyStaticAssets.ts",
-        "debug": "npm run build && npm run watch-debug",
+        "debug": "yarn build && yarn watch-debug",
         "serve-debug": "nodemon --inspect dist/server.js",
-        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
+        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-sass\" \"yarn watch-ts\" \"yarn serve-debug\""
     },
     "dependencies": {
         "async": "^3.1.0",
