--- a/.github/workflows/spaces-frontend.yml
+++ b/.github/workflows/spaces-frontend.yml
@@ -31,6 +31,6 @@ jobs:
     - run: yarn install --frozen-lockfile
     - run: yarn type-check
     - run: yarn build
-    - run: yarn test
+    - run: yarn test:ci
       env:
         CI: true
