--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -28,6 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "yarn lint && react-scripts test --coverage",
+    "test:ci": "yarn lint && react-scripts test",
     "eject": "react-scripts eject",
     "type-check": "tsc --noEmit",
     "type-check:watch": "yarn type-check -- --watch"
