--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,9 @@
         "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-sass\" \"yarn watch-ts\" \"yarn serve-debug\""
     },
     "dependencies": {
+        "@types/bcrypt": "^3.0.0",
         "async": "^3.1.0",
-        "bcrypt-nodejs": "^0.0.3",
+        "bcrypt": "^4.0.1",
         "bluebird": "^3.5.5",
         "body-parser": "^1.19.0",
         "compression": "^1.7.4",
@@ -52,7 +53,6 @@
     },
     "devDependencies": {
         "@types/async": "^3.0.2",
-        "@types/bcrypt-nodejs": "^0.0.30",
         "@types/bluebird": "^3.5.27",
         "@types/body-parser": "^1.17.1",
         "@types/chai": "^4.2.3",
