--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -29,7 +29,7 @@
     "lint": "tslint --project tsconfig.json -t codeFrame 'src/**/*.ts*' 'test/**/*.ts*'",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "yarn lint && react-scripts test --coverage",
+    "test": "yarn lint && react-scripts test",
     "test:ci": "yarn lint && react-scripts test",
     "eject": "react-scripts eject",
     "type-check": "tsc --noEmit",
