--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "fp-ts": "^2.5.3",
+    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -23,6 +25,7 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@types/ramda": "^0.27.3",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "@types/redux-logger": "^3.0.7",
