--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "email-addresses": "^3.1.0",
     "fp-ts": "^2.5.3",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
