--- a/backend/package.json
+++ b/backend/package.json
@@ -87,10 +87,15 @@
         "jest": "^25.3.0",
         "node-sass": "^4.13.1",
         "nodemon": "^2.0.3",
+        "prettier": "^2.0.4",
         "shelljs": "^0.8.3",
         "supertest": "^4.0.2",
         "ts-jest": "^25.3.1",
         "ts-node": "^8.4.1",
         "typescript": "^3.6.3"
+    },
+    "prettier": {
+        "semi": false,
+        "singleQuote": true
     }
 }
