--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^1.2.0",
     "rxjs": "^6.5.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
