--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "watch-ts": "tsc -w",
     "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
     "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
-    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "lint": "tsc --noEmit && tslint --project tsconfig.json -t codeFrame 'src/**/*.ts*' 'test/**/*.ts*'",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "debug": "yarn build && yarn watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
@@ -59,7 +59,6 @@
     "@types/compression": "^1.0.1",
     "@types/concurrently": "^4.1.0",
     "@types/errorhandler": "^0.0.32",
-    "@types/eslint": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/express-flash": "0.0.1",
     "@types/express-session": "^1.15.14",
@@ -79,11 +78,8 @@
     "@types/request-promise": "^4.1.44",
     "@types/shelljs": "^0.8.5",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.3.1",
-    "@typescript-eslint/parser": "^2.3.1",
     "chai": "^4.2.0",
     "concurrently": "^5.0.0",
-    "eslint": "^6.4.0",
     "jest": "^25.3.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.3",
@@ -92,6 +88,9 @@
     "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.4.1",
+    "tslint": "^6.1.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
     "typescript": "^3.6.3"
   },
   "prettier": {
