--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "connect-mongo": "^3.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
@@ -58,6 +59,7 @@
     "@types/chai": "^4.2.3",
     "@types/compression": "^1.0.1",
     "@types/concurrently": "^4.1.0",
+    "@types/cors": "^2.8.6",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.17.1",
     "@types/express-flash": "0.0.1",
