--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -18,6 +18,7 @@
     "rxjs": "^6.5.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
