--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.3.4",
     "email-addresses": "^3.1.0",
     "fp-ts": "^2.5.3",
+    "libphonenumber-js": "^1.7.51",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,7 +20,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "typesafe-actions": "^5.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "whatwg-url": "^8.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -34,6 +36,7 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/redux-logger": "^3.0.7",
     "@types/webpack-env": "^1.15.1",
+    "@types/whatwg-url": "^6.4.0",
     "jest-matcher-utils": "^25.5.0",
     "prettier": "^2.0.4",
     "tslint": "^6.1.1",
