--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -7,7 +7,7 @@
     "email-addresses": "^3.1.0",
     "fp-ts": "^2.5.3",
     "libphonenumber-js": "^1.7.51",
-    "ramda": "^0.27.0",
+    "rambda": "^5.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -29,7 +29,6 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/ramda": "^0.27.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
