--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -7,6 +7,7 @@
     "email-addresses": "^3.1.0",
     "fp-ts": "^2.5.3",
     "libphonenumber-js": "^1.7.51",
+    "moment": "^2.25.3",
     "rambda": "^5.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
