--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
+    "rambda": "^5.1.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
