--- a/spaces-frontend/public/manifest.json
+++ b/spaces-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ruimtes",
+  "name": "Zwaai.app Ruimteserver",
   "icons": [
     {
       "src": "favicon.ico",
