--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -8,6 +8,7 @@
     "fp-ts": "^2.5.3",
     "libphonenumber-js": "^1.7.51",
     "moment": "^2.25.3",
+    "qrcode": "^1.4.4",
     "rambda": "^5.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -30,6 +31,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/qrcode": "^1.3.4",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
