--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,8 @@
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-sass\" \"yarn watch-ts\" \"yarn watch-node\"",
-    "test": "jest --forceExit --coverage --verbose",
-    "watch-test": "yarn test -- --watchAll",
+    "integration-test": "jest --config=jest-integration.config.js --forceExit --coverage --verbose",
+    "watch-integration-test": "yarn integration-test -- --watchAll",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
