--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,8 +30,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn install --frozen-lockfile
-    - run: yarn build
-    - run: yarn integration-test
+    - run: |
+        yarn install --frozen-lockfile
+        yarn build
+        yarn ci-test
+        yarn integration-test
       env:
         CI: true
