--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-sass\" \"yarn watch-ts\" \"yarn watch-node\"",
-    "test": "jest --config=jest.config.js --coverage --watch",
+    "test": "yarn ci-test --watch",
+    "ci-test": "jest --config=jest.config.js --coverage",
     "integration-test": "jest --config=jest-integration.config.js --forceExit --coverage --verbose",
     "watch-integration-test": "yarn integration-test -- --watchAll",
     "build-ts": "tsc",
