Adds missing libsodium dependencies

--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
+    "libsodium-wrappers-sumo": "^0.7.6",
     "lodash": "^4.17.15",
     "lusca": "^1.6.1",
     "mongoose": "^5.7.5",
@@ -67,6 +68,7 @@
     "@types/express-session": "^1.15.14",
     "@types/jest": "^24.0.23",
     "@types/jquery": "^3.3.31",
+    "@types/libsodium-wrappers-sumo": "^0.7.3",
     "@types/lodash": "^4.14.141",
     "@types/lusca": "^1.6.1",
     "@types/mongoose": "^5.5.18",
