Added scope to package names

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zwaai-app-server",
+  "name": "@zwaai/server",
   "version": "0.1.0",
   "description": "Server for Zwaai.app",
   "repository": {
