--- a/common/package.json
+++ b/common/package.json
@@ -4,6 +4,7 @@
   "description": "Zwaai.app infections server common code",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": ["dist"],
   "repository": "https://github.com/Zwaai-app/infections-server",
   "author": "Zwaai",
   "license": "MIT",
