--- a/.github/workflows/spaces-frontend.yml
+++ b/.github/workflows/spaces-frontend.yml
@@ -6,16 +6,15 @@ name: Spaces Frontend
 defaults:
   run:
     working-directory: spaces-frontend
-    
+
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -23,14 +22,18 @@ jobs:
         node-version: [12.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install --frozen-lockfile
-    - run: yarn type-check
-    - run: yarn build
-    - run: yarn test:ci
-      env:
-        CI: true
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: |
+          cd ../common
+          yarn
+          yarn build
+      - run: yarn install --frozen-lockfile
+      - run: yarn type-check
+      - run: yarn build
+      - run: yarn test:ci
+        env:
+          CI: true
