--- a/spaces-frontend/package.json
+++ b/spaces-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.4",
+    "@zwaai/common": "../common",
     "email-addresses": "^3.1.0",
     "fp-ts": "^2.5.3",
     "libphonenumber-js": "^1.7.51",
